--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </main>
 
     <footer>
-
+        <p id="infFooter">&copy; Criado por Matheus Luz</p>
     </footer>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./js/api.js"></script>
