alteração html,css correção js botões e busca

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <header class="navbar">
         <img class="img-nav" src="./img/pngaaa.com-521974.png" alt="rick and Morty portal" srcset="">
-        <img class="title-page" src="./img/logo.png" alt="logo Rick and Morty" srcset="">
-        <img class="img-nav" src="./img/pngaaa.com-521963.png" alt="icone rick and morty" srcset="">
+        <img class="title-page" src="./img/Rick-And-Morty-Logo-Transparent-File.png" alt="logo Rick and Morty" srcset="">
+        <img class="img-nav" src="./img/NicePng_rick-and-morty-logo_1405637.png" alt="icone rick and morty" srcset="">
     </header>
 
     <main>
@@ -22,7 +22,9 @@
             <button id="next">Próxima</button>
         </div>
 
-        <div class="characters" id="charactersList"></div>
+        <div class="container">
+            <div class="characters" id="charactersList"></div>
+        </div>
     </main>
 
     <footer>
