alteração footer e cor status unknown

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </main>
 
     <footer>
-        <p id="infFooter">&copy; Criado por Matheus Luz</p>
+        <p id="infFooter">&copy; Developed by Matheus Luz</p>
     </footer>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./js/api.js"></script>
