Conclusão, resposividade, alterações e favicon add

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/pngaaa.com-521974.png" type="image/x-icon">
     <title>API Rick & Morty</title>
 </head>
 <body>
@@ -28,7 +29,7 @@
     </main>
 
     <footer>
-        <p id="infFooter">&copy; Developed by Matheus Luz</p>
+        <p id="infFooter">&copy; Developed by <a id="social" href="https://www.linkedin.com/in/matheus-prates-da-luz-08a531259/">Matheus Luz</a></p>
     </footer>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./js/api.js"></script>
