inclusão do _blank para link do footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-        <p id="infFooter">&copy; Developed by <a id="social" href="https://www.linkedin.com/in/matheus-prates-da-luz-08a531259/">Matheus Luz</a></p>
+        <p id="infFooter">&copy; Developed by <a id="social" href="https://www.linkedin.com/in/matheus-prates-da-luz-08a531259" target="_blank">Matheus Luz</a></p>
     </footer>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./js/api.js"></script>
